terraform/modules/aws/k8s/applications/react/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-app
  namespace: frontend
spec:
  selector:
    app: react-app
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
