terraform/modules/aws/k8s/applications/react/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-app
  namespace: frontend
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: react.mi-dominio.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-app
            port:
              number: 80
